--- a/fm/src/app/team-project/team-project.component.html
+++ b/fm/src/app/team-project/team-project.component.html
@@ -12,7 +12,7 @@
 </div>
 
 <!-- Table to Display Project Data -->
-<div class="table-wrapper">
+<div class="table-wrapper" >
   <table class="project-table">
     <thead>
       <tr>
@@ -68,150 +68,121 @@
     <form [formGroup]="projectForm" (ngSubmit)="isEditMode ? update() : onSubmit()">
       <!-- Project Name -->
       <div class="mb-3">
-        <label for="projectName" class="form-label">Project Name</label>
-        <input type="text" class="form-control" id="projectName" formControlName="projectname"
-          [class.is-invalid]="projectForm.get('projectname')?.invalid && (projectForm.get('projectname')?.dirty || projectForm.get('projectname')?.touched)">
-        <div
-          *ngIf="projectForm.get('projectname')?.invalid && (projectForm.get('projectname')?.dirty || projectForm.get('projectname')?.touched)"
-          class="invalid-feedback">
-          <div *ngIf="projectForm.get('projectname')?.errors?.['required']">Project name is required.</div>
-          <div *ngIf="projectForm.get('projectname')?.errors?.['minlength']">Project name must be at least 3 characters
-            long.</div>
+        <label class="form-label">Project Name</label>
+        <input type="text" class="form-control" formControlName="projectHolder"
+          [class.is-invalid]="projectForm.get('projectHolder')?.invalid && projectForm.get('projectHolder')?.touched">
+
+        <div class="invalid-feedback" *ngIf="projectForm.get('projectHolder')?.errors">
+          <div *ngIf="projectForm.get('projectHolder')?.errors?.['required']">Project name is required.</div>
+          <div *ngIf="projectForm.get('projectHolder')?.errors?.['minlength']">
+            Minimum 3 characters required.
+          </div>
         </div>
       </div>
 
-      <!-- Client Name -->
+      <!-- Project Voice -->
       <div class="mb-3">
-        <label for="clientName" class="form-label">Client Name</label>
-        <input type="text" class="form-control" id="clientName" formControlName="clientname"
-          [class.is-invalid]="projectForm.get('clientname')?.invalid && (projectForm.get('clientname')?.dirty || projectForm.get('clientname')?.touched)">
-        <div
-          *ngIf="projectForm.get('clientname')?.invalid && (projectForm.get('clientname')?.dirty || projectForm.get('clientname')?.touched)"
-          class="invalid-feedback">Client name is required.</div>
-      </div>
+        <label class="form-label">Project Voice</label>
+        <input type="text" class="form-control" formControlName="projectVoice"
+          [class.is-invalid]="projectForm.get('projectVoice')?.invalid && projectForm.get('projectVoice')?.touched">
 
-      <!-- Domain -->
-      <div class="mb-3">
-        <label for="domain" class="form-label">Domain</label>
-        <input type="text" class="form-control" id="domain" formControlName="domain"
-          [class.is-invalid]="projectForm.get('domain')?.invalid && (projectForm.get('domain')?.touched || projectForm.get('domain')?.dirty)">
-        <div
-          *ngIf="projectForm.get('domain')?.invalid && (projectForm.get('domain')?.touched || projectForm.get('domain')?.dirty)"
-          class="invalid-feedback">
-          Domain is required.
+        <div class="invalid-feedback" *ngIf="projectForm.get('projectVoice')?.errors">
+          <div *ngIf="projectForm.get('projectVoice')?.errors?.['required']">Project voice is required.</div>
         </div>
       </div>
 
-      <!-- Project Start Date -->
+      <!-- Project Id -->
       <div class="mb-3">
-        <label for="startDate" class="form-label">Project Start Date</label>
-        <input type="date" class="form-control" id="startDate" formControlName="startDate"
-          [class.is-invalid]="projectForm.get('startDate')?.invalid && (projectForm.get('startDate')?.dirty || projectForm.get('startDate')?.touched)">
-        <div
-          *ngIf="projectForm.get('startDate')?.invalid && (projectForm.get('startDate')?.dirty || projectForm.get('startDate')?.touched)"
-          class="invalid-feedback">
-          Project start date is required.
+        <label class="form-label">Project Id</label>
+        <input type="text" class="form-control" formControlName="projectId"
+          [class.is-invalid]="projectForm.get('projectId')?.invalid && projectForm.get('projectId')?.touched">
+
+        <div class="invalid-feedback" *ngIf="projectForm.get('projectId')?.errors">
+          <div *ngIf="projectForm.get('projectId')?.errors?.['required']">Project Id is required.</div>
         </div>
       </div>
 
-      <!-- Voice -->
+      <!-- Vendor -->
       <div class="mb-3">
-        <label for="voice" class="form-label">Voice</label>
-        <input type="text" class="form-control" id="voice" formControlName="voice"
-          [class.is-invalid]="projectForm.get('voice')?.invalid && (projectForm.get('voice')?.touched || projectForm.get('voice')?.dirty)">
-        <div
-          *ngIf="projectForm.get('voice')?.invalid && (projectForm.get('voice')?.touched || projectForm.get('voice')?.dirty)"
-          class="invalid-feedback">
-          <div *ngIf="projectForm.get('voice')?.errors?.['maxlength']">Voice must be less than 100 characters.</div>
+        <label class="form-label">Vendor</label>
+        <input type="date" class="form-control" formControlName="vendor"
+          [class.is-invalid]="projectForm.get('vendor')?.invalid && projectForm.get('vendor')?.touched">
+
+        <div class="invalid-feedback" *ngIf="projectForm.get('vendor')?.errors">
+          <div *ngIf="projectForm.get('vendor')?.errors?.['required']">Vendor is required.</div>
         </div>
       </div>
 
-      <!-- Voice Start Date -->
+      <!-- client -->
+      <div class="mb-3">
+        <label class="form-label">Client Name</label>
+        <input type="text" class="form-control" formControlName="client"
+          [class.is-invalid]="projectForm.get('client')?.invalid && projectForm.get('client')?.touched">
+
+        <div class="invalid-feedback" *ngIf="projectForm.get('client')?.errors">
+          <div *ngIf="projectForm.get('client')?.errors?.['required']">Client name is required.</div>
+          <div *ngIf="projectForm.get('client')?.errors?.['maxlength']">Max 100 chars allowed.</div>
+        </div>
+      </div>
+
+      <!-- Parent Company -->
       <div class="row mb-3">
         <div class="col-md-6">
-          <label for="voicestartDate" class="form-label">Voice Start Date</label>
-          <input type="date" class="form-control" id="voicestartDate" formControlName="voicestartDate">
-        </div>
-        <div class="col-md-6">
-          <label for="voiceendDate" class="form-label">Voice End Date</label>
-          <input type="date" class="form-control" id="voiceendDate" formControlName="voiceendDate">
-        </div>
-      </div>
+          <label class="form-label">Parent Company</label>
+          <input type="text" class="form-control" formControlName="parentCompany"
+            [class.is-invalid]="projectForm.get('parentCompany')?.invalid && projectForm.get('parentCompany')?.touched">
 
-      <!-- Coding -->
-      <div class="mb-3">
-        <label for="coding" class="form-label">Coding</label>
-        <input type="text" class="form-control" id="coding" formControlName="coding"
-          [class.is-invalid]="projectForm.get('coding')?.invalid && (projectForm.get('coding')?.dirty || projectForm.get('coding')?.touched)">
-        <div
-          *ngIf="projectForm.get('coding')?.invalid && (projectForm.get('coding')?.dirty || projectForm.get('coding')?.touched)"
-          class="invalid-feedback">
-          <div *ngIf="projectForm.get('coding')?.errors?.['maxlength']">
-            Coding must be less than 100 characters.
-          </div>
-        </div>
-      </div>
-
-      <!-- Coding Start Date -->
-      <div class="row">
-        <div class="col-md-6">
-          <div class="mb-3">
-            <label for="codingStartDate" class="form-label">Coding Start Date</label>
-            <input type="date" class="form-control" id="codingStartDate" formControlName="codingstartDate"
-              [class.is-invalid]="projectForm.get('codingstartDate')?.invalid && (projectForm.get('codingStartDate')?.dirty || projectForm.get('codingstartDate')?.touched)">
-            <div
-              *ngIf="projectForm.get('codingstartDate')?.invalid && (projectForm.get('codingstartDate')?.dirty || projectForm.get('codingstartDate')?.touched)"
-              class="invalid-feedback">
-              Please provide a valid Coding Start Date.
-            </div>
+          <div class="invalid-feedback" *ngIf="projectForm.get('parentCompany')?.errors">
+            <div *ngIf="projectForm.get('parentCompany')?.errors?.['required']">Required field.</div>
           </div>
         </div>
 
-        <!-- Coding End Date -->
-        <div class="col-md-6">
-          <div class="mb-3">
-            <label for="codingEndDate" class="form-label">Coding End Date</label>
-            <input type="date" class="form-control" id="codingEndDate" formControlName="codingendDate">
-            <div
-              *ngIf="projectForm.get('codingendDate')?.invalid && (projectForm.get('codingendDate')?.dirty || projectForm.get('codingendDate')?.touched)"
-              class="invalid-feedback">
-              Please provide a valid Coding End Date.
-            </div>
-          </div>
+      <!-- onboarded Date -->
+      <div class="mb-3">
+        <label class="form-label">onboarded Date</label>
+        <input type="date" class="form-control" formControlName="onboardedDate"
+          [class.is-invalid]="projectForm.get('onboardedDate')?.invalid && projectForm.get('onboardedDate')?.touched">
+        <div class="invalid-feedback" *ngIf="projectForm.get('onboardedDate')?.errors">
+          <div *ngIf="projectForm.get('onboardedDate')?.errors?.['required']">onboardedDate is required.</div>
         </div>
       </div>
 
-
-      <!-- Dynamic Assets -->
+      <!-- Project Domain -->
       <div class="mb-3">
-        <label class="form-label">Assets</label><br>
-        <div *ngFor="let asset of allAssets">
-          <input type="checkbox" [value]="asset" [checked]="assetArray.value.includes(asset)"
-            (change)="onCheckboxChange($event)">
-          {{ asset }}
+        <label class="form-label">Project Domain</label>
+        <input type="text" class="form-control" formControlName="projectDomain"
+          [class.is-invalid]="projectForm.get('projectDomain')?.invalid && projectForm.get('projectDomain')?.touched">
+
+        <div class="invalid-feedback" *ngIf="projectForm.get('projectDomain')?.errors">
+          <div *ngIf="projectForm.get('projectDomain')?.errors?.['required']">Project domain is required.</div>
         </div>
       </div>
 
+      <!-- Project Status -->
       <div class="mb-3">
-        <label for="projectStatus" class="form-label">Project Status</label>
-        <select class="form-select" id="projectStatus" formControlName="projectStatus">
-          <option value="">--Select Status--</option>
+        <label class="form-label">Project Status</label>
+        <select class="form-select" formControlName="projectStatus"
+          [class.is-invalid]="projectForm.get('projectStatus')?.invalid && projectForm.get('projectStatus')?.touched">
+
+          <option value="">--Select--</option>
           <option value="Active">Active</option>
           <option value="Inactive">Inactive</option>
           <option value="Pending">Pending</option>
         </select>
-        <div
-          *ngIf="projectForm.get('projectStatus')?.invalid && (projectForm.get('projectStatus')?.dirty || projectForm.get('projectStatus')?.touched)"
-          class="invalid-feedback">
-          Project status is required.
+
+        <div class="invalid-feedback" *ngIf="projectForm.get('projectStatus')?.errors">
+          <div *ngIf="projectForm.get('projectStatus')?.errors?.['required']">
+            Project status is required.
+          </div>
         </div>
       </div>
-      <!-- Submit and Cancel Buttons -->
+
+      <!-- Buttons -->
       <div class="d-flex justify-content-end">
         <button type="submit" class="btn btn-primary me-2" [disabled]="!projectForm.valid || isEditMode">Submit</button>
         <button type="button" class="btn btn-secondary" (click)="update()"
-          [disabled]="!projectForm.valid || !isEditMode">Update</button>
+          [disabled]="!projectForm.valid || !isEditMode">
+          Update
+        </button>
       </div>
-    </form>
   </div>
-</div>
